--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -10,7 +10,7 @@
     {{#each model.songs as |song|}}
     <li class="list-group-item song">
       {{song.title}}
-      <span class="rating pull-right">{{song.rating}}</span>
+      {{star-rating item=song rating=song.rating setAction="updateRating"}}
     </li>
     {{/each}}
   </ul>
