--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -1,11 +1,22 @@
 <!-- app/templates/bands/band/songs.hbs -->
 <div class="row">
   <ul class="list-group songs">
+    {{#if canCreateSong}}
+      <div class="list-group-item">
+      <form class="new-song-form" {{action "createSong" on="submit"}}>
+      {{input type="text" class="new-song" placeholder="New song"      value=title}}
+      <button class="btn btn-primary btn-sm new-song-button"      disabled={{isAddButtonDisabled}}>Add</button>
+      </form>
+      </div>
+    {{/if}}
 
-    <li class="list-group-item">
-      {{input type="text" class="new-band" placeholder="New song" value=title}}
-      <button class="btn btn-primary btn-sm new-song-button" {{action "createSong"}}>Add</button>
-    </li>
+    {{#unless canCreateSong}}
+    <div class="list-group-item empty-list">
+      <div class="empty-message">
+        There are no songs yet. Why don't you <a href="#" {{action "enableSongCreation"}}>create one?</a>
+      </div>
+    </div>
+    {{/unless}}
 
     {{#each model.songs as |song|}}
     <li class="list-group-item song">
