leaned more about routing

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -18,7 +18,7 @@
     </div>
     {{/unless}}
 
-    {{#each model.songs as |song|}}
+    {{#each sortedSongs as |song|}}
     <li class="list-group-item song">
       {{song.title}}
       {{star-rating item=song rating=song.rating setAction="updateRating"}}
