--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,17 +1,19 @@
 /* app/styles/app.css */
+
 html, body {
   margin: 20px;
 }
+
 .page-header a h1 {
   color: #555;
 }
+
 .list-wrapper {
   margin-left: 0;
   margin-right: 0;
 }
-.navbar-default .navbar-nav > li > a.active,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
+
+.navbar-default .navbar-nav>li>a.active, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
   color: #555555;
   background-color: #e7e7e7;
 }
@@ -20,19 +22,23 @@ html, body {
   color: #aaa;
   font-size: 1.1em;
 }
+
 .empty-list {
   min-height: 100px;
   text-align: center;
 }
+
 .empty-list .empty-message {
   display: inline-block;
   color: #555;
   line-height: 100px;
 }
+
 .band-link .pointer {
   float: right;
   display: none;
 }
+
 .band-link.active .pointer {
   display: block;
 }
@@ -40,13 +46,16 @@ html, body {
 .new-band {
   width: 82%;
 }
+
 .new-band-button {
   float: right;
   padding: 3px 10px;
 }
+
 .new-song {
   width: 50%;
 }
+
 .new-song-button {
   margin-left: 20px;
 }
@@ -56,60 +65,70 @@ html, body {
 }
 
 .song-filter-search-panel {
-padding: 10px 15px;
-margin-bottom: -1px;
-background-color: #fff;
-border: 1px solid #ddd;
-display: block;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  display: block;
 }
+
 .song-filter-search-panel .active .sorting-button {
-z-index: 2;
-color: #fff;
-background-color: #428bca;
-border-color: #428bca;
+  z-index: 2;
+  color: #fff;
+  background-color: #428bca;
+  border-color: #428bca;
 }
+
 .sorting-link:hover {
-text-decoration: none;
+  text-decoration: none;
 }
-.song-filter-search-panel .sorting-link + .sorting-link {
-margin-left: 5px;
+
+.song-filter-search-panel .sorting-link+.sorting-link {
+  margin-left: 5px;
 }
+
 .sorting-panel {
-float: left;
+  float: left;
 }
+
 @media (max-width: 690px) {
-.sorting-panel {
-margin-bottom: 5px;
+  .sorting-panel {
+    margin-bottom: 5px;
+  }
 }
-}
+
 .search-panel {
-float: right;
+  float: right;
 }
+
 .search-panel input {
-padding: 4px 12px 6px 12px;
+  padding: 4px 12px 6px 12px;
 }
+
 .search-panel .input-group-btn {
-display: inline-block;
+  display: inline-block;
 }
+
 .search-panel .input-group-btn .search-button {
-margin-left: -5px;
+  margin-left: -5px;
 }
 
 .page-header a:hover {
-text-decoration: none;
+  text-decoration: none;
 }
+
 .band-info {
-margin-top: 20px;
+  margin-top: 20px;
 }
-.nav-tabs > li > a.active,
-.nav-tabs > li > a.active:hover,
-.nav-tabs > li > a.active:focus {
-color: #555;
-cursor: default;
-background-color: #fff;
-border: 1px solid #ddd;
-border-bottom-color: transparent;
+
+.nav-tabs>li>a.active, .nav-tabs>li>a.active:hover, .nav-tabs>li>a.active:focus {
+  color: #555;
+  cursor: default;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-bottom-color: transparent;
 }
+
 .band-description-header {
-margin-bottom: 20px;
+  margin-bottom: 20px;
 }
