--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -154,7 +154,7 @@ html, body {
 }
 
 .spinner {
-  background: url('/images/ajax-loader.gif') no-repeat;
+  /*background: url('/images/ajax-loader.gif') no-repeat;*/
   height: 31px;
   width: 31px;
   margin: 0 auto;
