--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -3,7 +3,7 @@
   {{#if canCreateSong}}
     <div class="list-group-item">
       <form class="new-song-form" {{action "createSong" on="submit"}}>
-        {{input type="text" class="new-song" placeholder="New song" value=title}}
+        {{input type="text" class="new-song" placeholder=newSongPlaceholder value=title}}
         <button class="btn btn-primary btn-sm new-song-button" disabled= {{isAddButtonDisabled}}>Add</button>
       </form>
     </div>
@@ -51,7 +51,7 @@
 <div>
 {{#each sortedSongs as |song|}}
   <li class="list-group-item song">
-    {{song.title}} {{star-rating item=song rating=song.rating setAction="updateRating"}}
+    {{capitalize song.title}} {{star-rating item=song rating=song.rating setAction="updateRating"}}
   </li>
 {{/each}}
 </div>
